:bug: Allow platform admins to manage independent Web users
